--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container text-center">
+<h1>Wagon Hunt</h1>
+<p>Find the best tech product</p>
+<p>Great product on the <%= @today %> </p>
+</div>
