--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,5 @@
 <h1>Wagon Hunt</h1>
 <p>Find the best tech product</p>
 <p>Great product on the <%= @today %> </p>
+<%= link_to "All products", products_path, class: "btn btn-success" %>
 </div>
