--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,9 @@
 <h1> All products</h1>
-
+<p><%= link_to "Revenir à l'acceuil", root_path, class: "btn btn-primary" %></p>
+<p><%= link_to "Ajouter un produit", new_product_path, class: "btn btn-danger" %></p>
 <ul>
   <% @products.each do |product| %>
-    <li> <%= product.name %> (<%= product.url %>) </li>
+  <li><%= link_to product.name, product_path(product)%> (<%= product.url %>)</li>
+
   <% end %>
 </ul>
