--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,3 +7,5 @@
 <h3 class="text-center">
   <%= @product.url %>
 </h3>
+
+<p class="text-center"><%= link_to"revenir à la liste", products_path %></p>
