--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,9 @@
 <p><%= link_to "Ajouter un produit", new_product_path, class: "btn btn-danger" %></p>
 <ul>
   <% @products.each do |product| %>
-  <li><%= link_to product.name, product_path(product)%> (<%= product.url %>)</li>
+  <li>
+    <%= link_to product.name, product_path(product)%> (<%= product.url %>)
+  </li>
 
   <% end %>
 </ul>
