--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,4 +8,8 @@
   <%= @product.url %>
 </h3>
 
-<p class="text-center"><%= link_to"revenir à la liste", products_path %></p>
+<p class="text-center">
+  <%= link_to "Editer", edit_product_path(@product), class: "btn btn-warning" %>
+  <%= link_to "Supprimer", product_path(@product), method: :delete, class: "btn btn-danger" %>
+  <%= link_to "Revenir à la liste", products_path, class: "btn btn-primary" %>
+</p>
