--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,6 +5,7 @@
     <p>
       <%=@product.tagline %>
       <span class="label label-default"> <%= @product.category %> </span>
+      <p>Posted by <%=@product.user.email%> </p>
     </p>
     <%= link_to "GET IT", @product.url, class: "btn btn-primary btn-lg" %>
   </div>
