--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,9 +4,10 @@
     <%= image_tag "lewagon.png" %>
   </a>
 
+
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-
+  <% if user_signed_in? %>
     <!-- Text link -->
     <%= link_to "All products", products_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
@@ -17,13 +18,19 @@
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li><a href="#">Profile</a></li>
           <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         </ul>
       </div>
     </div>
 
     <!-- Button (call-to-action) -->
-    <%= link_to "Ajouter un produit", new_product_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
+      <%= link_to "Ajouter un produit", new_product_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
+    <%else%>
+      <%= link_to "Connexion", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Inscription", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
+    <%end%>
+
   </div>
 
   <!-- Dropdown appearing on mobile only -->
