--- a/app/assets/stylesheets/components/_product.scss
+++ b/app/assets/stylesheets/components/_product.scss
@@ -37,6 +37,13 @@
   font-size: 13px;
   line-height: 20px;
 }
+
+.product-upvoted, a.product-upvote.product-upvoted {
+  color: #5898f1;
+}
+a.product-upvote {
+  color: black;
+}
 .product-count {
   margin: 2px 0 0;
 }
@@ -82,6 +89,9 @@
 .product-upvote:hover {
   color: #5898f1;
   cursor: pointer;
+}
+a.product-upvote:hover {
+  text-decoration: none;
 }
 .product:hover .product-upvote { transform: scale(1.2) }
 .product:hover .product-controls-hidden a { color: #E6E6E6 }
