--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,6 +1,7 @@
 <div class="container text-center">
 
   <h1>Meet the team</h1>
+  <%= cl_image_tag "sf_zwdnf1.jpg", width: 400, height: 200, crop: :fill %>
   <ul>
     <% @members.each do |member| %>
     <li> <%= member%></li>
