--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,10 +7,31 @@
 
       <% @products.each do |product| %>
       <div class="product">
+      <% if user_signed_in? %>
+        <% if current_user.voted_for?(product) %>
+          <%= link_to upvote_path(current_user.upvotes.where(product: product).first), method: :delete, class: 'product-upvote product-upvoted' do %>
+            <div class="product-arrow"></div>
+            <div class='product-count'>
+              <%= product.upvotes.size %>
+            </div>
+          <% end %>
+        <% else %>
+          <%= link_to upvotes_path(product_id: product.id), method: :post, class: 'product-upvote' do %>
+            <div class="product-arrow"></div>
+            <div class='product-count'>
+              <%= product.upvotes.size %>
+            </div>
+          <% end %>
+        <% end %>
+
+      <% else %>
         <div class='product-upvote'>
           <div class="product-arrow"></div>
-          <div class='product-count'>0</div>
+          <div class='product-count'>
+            <%= product.upvotes.size %>
+          </div>
         </div>
+      <% end %>
         <img src="http://unsplash.it/300/200/?random" alt="#" class="product-image hidden-xs">
         <div class='product-body'>
           <h3><%= product.name %> </h3>
